--- a/about/index.html
+++ b/about/index.html
@@ -7,22 +7,22 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.DjroCB-m.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?173682ad-289c-43e6-ab7e-5a49c4b434f9">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D7PaJqce.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BGtkQylS.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DDIMkkgt.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/q-NB83ua.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DDhM9cQ0.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BHxYvPYj.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/9jDyPN5f.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DqTeYPCK.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CePrgn3e.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bs0cxFH0.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/5PxU3Fu6.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?02cc30cc-35f6-4093-a78c-977dbf4f1e69">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DDNL1biG.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dmx3ovhq.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CUhT1Ayu.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CzdyCiri.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DbTvxS1M.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/KcHWHTbZ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/gKX4e1Me.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BVtyFupi.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BYJGNK8W.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DDhPrW_F.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dhobwd73.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/D7PaJqce.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?173682ad-289c-43e6-ab7e-5a49c4b434f9">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736674905608]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"173682ad-289c-43e6-ab7e-5a49c4b434f9",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DDNL1biG.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?02cc30cc-35f6-4093-a78c-977dbf4f1e69">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736677383870]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"02cc30cc-35f6-4093-a78c-977dbf4f1e69",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
