--- a/about/index.html
+++ b/about/index.html
@@ -6,21 +6,21 @@
 <style>.loader-cont{align-items:center;background-color:#fff;display:flex;height:100vh;justify-content:center;position:fixed;width:100vw;z-index:1000000}.loader{align-items:flex-start;aspect-ratio:1;display:flex;width:60px}.loader:after,.loader:before{aspect-ratio:1;content:"";flex:1;--g:conic-gradient(from -90deg at 10px 10px,#fff 90deg,#0000 0);animation:l20 1s infinite;background:var(--g),var(--g),var(--g);filter:drop-shadow(30px 30px 0 white)}.loader:after{transform:scaleX(-1)}@keyframes l20{0%{background-position:0 0,10px 10px,20px 20px}33%{background-position:10px 10px}66%{background-position:0 20px,10px 10px,20px 0}to{background-position:0 0,10px 10px,20px 20px}}.loader_bg{align-items:center;animation:noiseAnimation 3s ease-in-out infinite;background:#0b0b0b;background-size:200% 200%;display:flex;height:100%;justify-content:center;width:100%}@keyframes noiseAnimation{0%{background-position:0 0}50%{background-position:100% 100%}to{background-position:0 0}}</style>
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="stylesheet" href="/_nuxt/Preloader.D3Xyewty.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?4f8769b3-cd60-40c6-8776-f622e2bb6a92">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CWrocmlE.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DFSIy2lm.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BdN5ywTu.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C5DQtbpP.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BZP1TfZY.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DumJrZZV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BwdR963T.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/hO9JhPle.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CsQLIOih.js">
+<link rel="stylesheet" href="/_nuxt/Preloader.GJXSjM2l.css">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?1affbec7-ba54-4680-974d-2a4ba38dfc7f">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bb6t2Dq9.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BGa2cZNt.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ByBFVLQQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CWHMaTmE.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CjtlvQM3.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/6MQ_PQ6s.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DjTqU1SW.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Vr_52-dJ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/qcKkq4f3.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CWrocmlE.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?4f8769b3-cd60-40c6-8776-f622e2bb6a92">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736678917509]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"4f8769b3-cd60-40c6-8776-f622e2bb6a92",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/Bb6t2Dq9.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?1affbec7-ba54-4680-974d-2a4ba38dfc7f">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736692112285]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"1affbec7-ba54-4680-974d-2a4ba38dfc7f",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
