--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,21 +7,21 @@
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
 <link rel="stylesheet" href="/_nuxt/loader.jJ2CPY3W.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?4f8769b3-cd60-40c6-8776-f622e2bb6a92">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CWrocmlE.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cm5piesE.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BdN5ywTu.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C-qCaanY.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dhom8WGi.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DKcRwRVp.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DumJrZZV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BwdR963T.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/hO9JhPle.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CsQLIOih.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?1affbec7-ba54-4680-974d-2a4ba38dfc7f">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bb6t2Dq9.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DPW4yE9P.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ByBFVLQQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/aWvNBMNz.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DjkHG7Nt.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BpZXEKkm.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/6MQ_PQ6s.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DjTqU1SW.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Vr_52-dJ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/qcKkq4f3.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CWrocmlE.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?4f8769b3-cd60-40c6-8776-f622e2bb6a92">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736678917513]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"4f8769b3-cd60-40c6-8776-f622e2bb6a92",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/Bb6t2Dq9.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?1affbec7-ba54-4680-974d-2a4ba38dfc7f">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736692112289]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"1affbec7-ba54-4680-974d-2a4ba38dfc7f",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
