--- a/about/index.html
+++ b/about/index.html
@@ -7,20 +7,20 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Preloader.GJXSjM2l.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?6fe32724-6016-4fe5-ba12-34ef249d7b4d">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B7tzQJ-3.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CVGcW8-E.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BAUhVXb9.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B3rX4Ui7.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CQgkHxlw.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Daz4Uiia.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/COe8RYF_.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B5bLYtIp.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CKDMcuo-.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?7bab2334-2c00-492e-9800-61049c59f5fc">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DH9KVflI.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CU1oG2qA.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CnMfvtLb.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cmj1H8vR.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/blORso_7.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BjZAVz-0.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CiXkETgN.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dtyqd1d7.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D2m1VejS.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/B7tzQJ-3.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?6fe32724-6016-4fe5-ba12-34ef249d7b4d">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736692774910]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"6fe32724-6016-4fe5-ba12-34ef249d7b4d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DH9KVflI.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?7bab2334-2c00-492e-9800-61049c59f5fc">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736694947647]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7bab2334-2c00-492e-9800-61049c59f5fc",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
